# mnist_ggml

./: .gitignore  CMakeLists.txt  README.md  load_mnist.cpp  main.cpp  main_conv.cpp  test_images.py  train_model.py  train_model_cnn.py
